--- a/markdown-preview/src/main.css
+++ b/markdown-preview/src/main.css
@@ -1,3 +1,25 @@
+:focus {
+  outline: none;
+}
+
 body {
   margin: 0;
+}
+
+.container {
+  display: flex;
+  height: 100vh;
+}
+
+.container > .edit {
+  flex: 1;
+  overflow-y: scroll;
+  resize: none;
+  border: 0;
+}
+
+.container > .preview {
+  flex: 1;
+  overflow-y: scroll;
+  padding: 2px;
 }
